前置识别完成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     //region greenDao
     implementation "org.greenrobot:greendao:$rootProject.greendaoVersion"
     implementation "org.greenrobot:greendao-generator:$rootProject.greendaoVersion"
+    implementation "com.github.yuweiguocn:GreenDaoUpgradeHelper:$rootProject.greendaoupdateVersion"
 }
