--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation "org.greenrobot:greendao:$rootProject.greendaoVersion"
     implementation "org.greenrobot:greendao-generator:$rootProject.greendaoVersion"
     implementation "com.github.yuweiguocn:GreenDaoUpgradeHelper:$rootProject.greendaoupdateVersion"
+    implementation "com.facebook.stetho:stetho:1.3.1"
+    implementation "com.facebook.stetho:stetho-okhttp3:1.3.1"
 }
