--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.HomeActivity">
+        <activity
+            android:name=".ui.activity.HomeActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +29,7 @@
             android:name=".ui.activity.CameraActivity"
             android:hardwareAccelerated="true" />
         <activity android:name=".ui.activity.StartupActivity" />
-        <activity android:name=".ui.activity.DetailsActivity"></activity>
+        <activity android:name=".ui.activity.DetailsActivity" />
     </application>
 
 </manifest>
