--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,17 @@ android {
         applicationId "com.example.zd_x.faceverification"
         minSdkVersion 24
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    signingConfigs {
+        release {
+            keyAlias 'faceVerification'
+            keyPassword 'zhongdun123'
+            storeFile file('E:\\work\\FaceVerification\\faceVerification.jks.jks')
+            storePassword 'zhongdun123'
+        }
     }
     buildTypes {
         release {
@@ -53,7 +61,12 @@ dependencies {
     implementation "com.scwang.smartrefresh:SmartRefreshLayout:$rootProject.smartRefreshLayoutVersion"
     //appupdate
     implementation "com.qianwen:update-app:$rootProject.updateAppVersion"
+
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
+
+    implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxjavaVersion"
     implementation 'com.facebook.stetho:stetho:1.3.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
     implementation 'com.android.support:design:27.1.1'
+    implementation project(':update')
 }
